# module-template

./: README.md  pyproject.toml
src/package_folder/: translate.py
