[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
version = "0.0.1"
authors = [
    {name = "brittney hernandez", email = "author@example.com"},
    ]
descriptiom = "what is the package for?"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
packages = ["package_folder"]